--- a/effect_calculator/styles.css
+++ b/effect_calculator/styles.css
@@ -1,11 +1,16 @@
 body {
 	background-color: black;
-	font-size: 20px;
-	width: 260px;
+	color: grey;
+	font-size: 25px;
+}
+
+table {
+	table-layout: fixed;
 }
 
 select {
 	font-size: 50px;
+	width: 260px;
 }
 
 input {
@@ -15,15 +20,8 @@ input {
 	text-align: center;
 }
 
-#calculator {
-	background-color: grey;
-}
-
-#check {
-	width: 100%;
-}
-
 #outcome {
+	color: black;
 	font-size: 50px;
 	font-weight: bold;
 }
