--- a/effect_calculator/styles.css
+++ b/effect_calculator/styles.css
@@ -4,6 +4,10 @@ body {
 	font-size: 25px;
 }
 
+span {
+	font-size: 50px;
+}
+
 table {
 	table-layout: fixed;
 }
@@ -18,6 +22,13 @@ input {
 	width: 80px;
 	font-size: 50px;
 	text-align: center;
+}
+
+#instead {
+	color: black;
+	font-size: 50px;
+	font-weight: bold;
+	background-color: green;
 }
 
 #outcome {
