--- a/effect_calculator/styles.css
+++ b/effect_calculator/styles.css
@@ -31,6 +31,12 @@ input {
 	background-color: green;
 }
 
+#mmx5e_dos {
+	color: black;
+	font-size: 50px;
+	font-weight: bold;
+}
+
 #outcome {
 	color: black;
 	font-size: 50px;
